# wave-downscaling

./: .gitignore  Dockerfile  README.md  matplotlibrc  pyproject.toml  requirements.txt
.github/workflows/: ww3-ci.yml
config/: basic.yaml  bigunetrpp_perceptual.yaml  diffusion.yaml  unetrpp_customloss.yaml  unetrpp_mse.yaml
images/: diffusion.drawio  schema_data.drawio  schema_io.drawio
tests/: test_metrics.py  test_transforms.py
ww3/: datamodule.py  dataset.py  metadata.yaml  metrics.py  plots.py  sample.py  settings.py  transforms.py
ww3/data/: grib_utils.py  show_grib.py
ww3/plmodules/: baseplmodule.py  diffusionplmodule.py  directplmodule.py
