[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "wave-downscaling"
authors = [
  {name="Mathilde Ferreira", email="mathilde.ferreira@meteo.fr"},
  {name="Lea Berthomier", email="lea.berthomier@meteo.fr"},
  {name="Frank Guibert", email="frank.guibert@meteo.fr"},
  {name="Oscar Dewasmes", email="oscar.dewasmes@meteo.fr"},
  {name="Theo Tournier", email="theo.tournier@meteo.fr"},
  {name="Bruno Pradel", email="bruno.pradel@meteo.fr"},
]
description = "Downscaling of waves models of Meteo France"
readme = "README.md"
requires-python = "3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]
license = {file = "LICENSE"}
keywords = ["PyTorch", "Deep Learning", "Downscaling", 'Waves models "Artificial Intelligence", "Meteo-France"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# Include marker file `py.typed` to respect PEP561 and declare this package as type hinted
[tool.setuptools.package-data]
"wave-downscaling" = ["py.typed"]

[project.urls]
Homepage = "https://github.com/meteofrance/wave-downscaling"

[tool.sourcery-analytics]

[tool.sourcery-analytics.thresholds]
method_length = 64
method_cyclomatic_complexity = 26
method_cognitive_complexity = 34
method_working_memory = 45

[tool.ruff]
target-version = "py311"
line-length = 88
builtins = ["_"]
exclude = [
]

[tool.ruff.format]
docstring-code-format = true


[tool.ruff.lint]
select = [
  "I",  # isort
  "F",  # pyflakes
  "W",  # pycodestyle warnings
  "E",  # pycodestyle errors
  "D",  # pydocstyle
]
ignore = [
    "D100",  # Allow undocumented-public-module
    "D200",  # Allow unnecessayry-multiline-docstring
    "D202",  # Allow blank-line-after-function after function docstring
    "D203",  # Allow incorrect-blank-line-before-class
    "D205",  # Allow missing-blank-line-after-summary
    "D212",  # Allow multi-line-summary-first-line
    "D213",  # Allow multi-line-summary-second-line
    "D415",  # Allow missing-terminal-punctuation

    # Temporary, to be removed once refacto done:
    "D101",  # Allow undocumented-public-class
    "D102",  # Allow undocumented-public-method
    "D103",  # Allow undocumented-public-function
    "D104",  # Allow undocumented-public-package
    "D105",  # Allow undocumented-magic-method
    "D107",  # Allow undocumented-public-init
    "E501",  # Allow lines too long
]

[tool.ruff.lint.pydocstyle]
convention = "google"
# ignore-var-parameters = true

[tool.ruff.lint.pycodestyle]
max-line-length = 88
ignore-overlong-task-comments = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.pyright]
# https://microsoft.github.io/pyright/#/configuration?id=sample-pyprojecttoml-file

## Run options
include = [
  "projects/ww3",
]
ignore = [
  "projects/ww3/ww3/plmodules/flowplmodule.py"
]

verboseOutput = true

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"

useLibraryCodeForTypes = true

## Type hinting options
# Disallow list[Any] and set[any], forces to fully type them.
strictListInference = true
strictSetInference = true
# Allow dict[Any] as complex dict structures make typing irelevant.
strictDictionaryInference = false

# Analyse everything
analyzeUnannotatedFunctions = true

# Allow implicit optional in function parameter definition.
# def foo(param: int = None) -> None:
strictParameterNoneValue = false

enableTypeIgnoreComments = true  # Allows  # type: ignore

deprecateTypingAliases = true  # Deprecates the use of typing.List, Dict, ...

## Type checking rules
# When a class @property getter and setter have different types.
reportPropertyTypeMismatch = "error"

# Cyclical import chains slow down type analysis and hint at architectural layering issues.
reportImportCycles = "none"

reportUnusedImport = "error"

reportDuplicateImport = "error"

reportWildcardImportFromLibrary = "error"

reportUntypedFunctionDecorator = "error"

reportUntypedClassDecorator = "error"

reportUntypedBaseClass = "none"

reportUntypedNamedTuple = "error"

reportPrivateUsage = "error"

reportTypeCommentUsage = "error"

reportPrivateImportUsage = "error"

reportConstantRedefinition = "error"
reportIncompatibleVariableOverride = "none"

# reportDeprecated [boolean or string, optional]: Generate or suppress diagnostics for use of a class or function that has been marked as deprecated. The default value for this setting is "none".

reportInconsistentConstructor = "error"

reportUninitializedInstanceVariable = "none"

# Disallow input or return parameters for functions or methods that have an unknown type
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"

reportMissingParameterType = "error"
reportMissingTypeArgument = "none"

reportCallInDefaultInitializer = "none"

reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportAssertAlwaysTrue = "error"
reportImplicitStringConcatenation = "none"

reportUnusedExpression = "error"

reportUnnecessaryTypeIgnoreComment = "error"

reportMatchNotExhaustive = "error"

reportUnreachable = "none"

reportImplicitOverride = "none"  # Because @override decorator is 3.12 >